# experimental

./: .bazel-affected-tests.yaml  .bazelignore  .bazeliskrc  .bazelrc  .dir-locals.sample.el  .env.example  .gitignore  .golangci.yml  .golangci.yml.hash  .shellcheckrc  .windsurfrules  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  PklProject  PklProject.deps.json  README.org  SECURITY.md  WORKSPACE  check-bazel-go-files.sh  check-bazel-src-files.sh  claude-migration.md  deps.bzl  gen_org_lint_tests.sh  go.mod  go.sum  populate_windsurf_rules.sh  pyproject.toml  requirements.in  requirements.txt  setup-dev.sh  test-create-image.el  test-image-size.el
baseball/: BUILD.bazel  README.md  baseball.go  baseball_test.go
codelab/go/course/: BUILD.bazel  course.go  course_test.go
codelab/go/generics/: BUILD.bazel  generics.go
codelab/go/partialconsumption/: BUILD.bazel  main.go
codelab/go/todo/: BUILD.bazel  Milestone1.org  Milestone2.org  Milestone3.org  README.org  ReorderingFeature.org  SubtasksFeature.org  main.go  main_test.go  todo
codelab/go/todo/config/: BUILD.bazel  config.go  config_test.go
codelab/go/todo/core/: BUILD.bazel  core.go  core_test.go  reorder_test.go  subtask_test.go
codelab/go/todo/testutil/: BUILD.bazel  testutil.go
codelab/go/todo/todo/: todo.go  todo_test.go
devtools/gh-nudge/: .windsurfrules  BUILD.bazel  Makefile  PKL_MIGRATION_PLAN.md  README.org  cleanup-repo.sh  codeowners.org  copy-pr-comments.sh  go.mod  go.sum  merge.org  nudge.org  pr-review.org  slack.org  storage-design.md  storage.org
devtools/gh-nudge/cmd/gh-codeowners/: BUILD.bazel  main.go
devtools/gh-nudge/cmd/gh-merge/: BUILD.bazel  main.go
devtools/gh-nudge/cmd/gh-nudge/: BUILD.bazel  main.go  main_test.go
devtools/gh-nudge/cmd/gh-pr-review/: BUILD.bazel  README.md  main.go
devtools/gh-nudge/cmd/gh-slack/: BUILD.bazel  main.go
devtools/gh-nudge/cmd/gh-storage/: BUILD.bazel  main.go
devtools/gh-nudge/internal/argparser/: BUILD.bazel  args.go  args_test.go
devtools/gh-nudge/internal/codeowners/: BUILD.bazel  codeowners.go  codeowners_test.go
devtools/gh-nudge/internal/config/: BUILD.bazel  config.go  config_test.go
devtools/gh-nudge/internal/git/: BUILD.bazel  autodetect_test.go  branch.go  branch_test.go  diff.go  diff_test.go
devtools/gh-nudge/internal/github/: BUILD.bazel  github.go  github_test.go  prreview.go  prreview_test.go
devtools/gh-nudge/internal/models/: BUILD.bazel  adjustment.go  adjustment_test.go  advanced_analysis.go  advanced_analysis_test.go  autodetect.go  autodetect_test.go  context.go  context_analysis.go  context_analysis_test.go  context_test.go  diff_format_test.go  language_analyzers.go  ml_enhancements.go  ml_enhancements_test.go  output.go  output_test.go  pr.go  pr_test.go  prreview.go  prreview_identifier_test.go  prreview_test.go  repository.go  smart_merge.go  smart_merge_test.go  target.go  target_test.go  undo_system.go  undo_system_test.go
devtools/gh-nudge/internal/notification/: BUILD.bazel  (+2 more)
devtools/gh-nudge/pkl/: BUILD.bazel  Config.pkl  example.config.pkl
devtools/internal/executor/: BUILD.bazel  command_builder.go  command_builder_test.go  concurrent_executor.go  concurrent_executor_test.go  executor.go  executor_test.go  helpers.go  helpers_test.go  mock_executor.go  mock_executor_test.go  result.go  shell_execution_test.go  signal_executor.go  signal_executor_test.go  signal_handler.go  signal_handler_test.go  types.go  types_test.go
devtools/pkg/executor/: BUILD.bazel  command_builder.go  concurrent.go  executor.go  executor_test.go  helpers.go  helpers_test.go  mock_test.go  result.go  types.go
devtools/pkg/ghauth/: BUILD.bazel  env.go  env_test.go  ghcli.go  ghcli_test.go  token.go  token_test.go
devtools/pkg/ghtest/: BUILD.bazel  fixtures.go  mock.go  mock_test.go  skip.go
devtools/repo-sync/: BUILD.bazel  IMPLEMENTATION_PLAN.md  Makefile  README.md  README.org  conflict-resolution.org  database-schema.org  error-handling.org  technical-implementation.org
devtools/repo-sync/examples/: BUILD.bazel  demo.sh  example-project.yaml
devtools/setup-dev/ansible/: 7z.yml  BUILD.bazel  CLAUDE.md  Makefile  README.org  TODO.org  act.yml  actionlint.yml  ag.yml  all.yml  ansible.cfg  antigravity.yml  apt-packages-emacs-daily.txt  apt-packages-minimal.txt  apt-packages.txt  bazel-affected-tests.yml  bazel.yml  biome.yml  bootstrap.sh  bootstrap.sh.sha256  buf.yml  buildifier.yml  buildozer.yml  cargo-add.yml  cargo-clippy.yml  cargo-edit.yml  cargo-install-update.yml  cargo-outdated.yml  cargo-update.yml  cargo.yml  check-jsonschema.yml  checkstyle.yml  clang-format.yml  claude.yml  claudelytics.yml  cleanup-repo.yml  cloudflared.yml  cmake.yml  codex.yml  copier.yml  (+229 more)
devtools/setup-dev/go/: BUILD.bazel  README.org  check.go  check_test.go  command.go  command_test.go  main.go  pkgmans.go  pkgmans_test.go  rulegraph.go  rules.go
html_convert/: BUILD.bazel  html_convert.py
memocache/: BUILD.bazel  memocache.go  memocache_test.go
scripts/: BUILD.bazel  PRD.txt  review-and-push-loop.sh  review-and-push-loop_test.sh  update-env-keys.sh
scripts/reviewpush/: BUILD.bazel  reviewpush_test.go
text/canvas/: BUILD.bazel  README.md  border.go  borderlayout.go  boxchars.go  canvas.go  canvas_test.go  convenience.go  example_layouts_test.go  example_table_integration_test.go  flowlayout.go  grid.go  layout.go  layout_test.go  stack.go
text/gantt/: BUILD.bazel  gantt.go  gantt_test.go
text/markdown/linkfix/: BUILD.bazel  linkfix.go  linkfix_test.go
text/markdown/split/: BUILD.bazel  README.md  split.go  split_test.go
text/table/: BUILD.bazel  example_test.go  golden_test.go  table.go  table_test.go
text/table/testdata/: basic_fixed_width_clipped.golden  builder_pattern.golden  custom_separator.golden  empty_and_missing_cells.golden  mixed_alignments.golden  unlimited_width.golden  wrapped_content.golden
text/wrap/: BUILD.bazel  wrap.go  wrap_test.go
tools/format/: BUILD.bazel
tools/lint/: BUILD.bazel  linters.bzl  nogo.json
tools/mdlinkfix/: BUILD.bazel  main.go  main_test.go
(+303 files in other folders)
