load("@gazelle//:def.bzl", "gazelle")
load("//tools/org-lint:defs.bzl", "org_lint_tests")

# Gazelle configuration
gazelle(
    name = "gazelle",
    command = "fix",
    extra_args = [
        "-build_file_name=BUILD.bazel",
        "-repo_root=.",
        "-go_naming_convention=go_default_library",
        "-go_prefix=github.com/jaeyeom/experimental",
    ],
    prefix = "github.com/jaeyeom/experimental",
)

# Update BUILD.bazel files
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# Format alias
alias(
    name = "format",
    actual = "//tools/format:format",
)

exports_files(
    [
        "MODULE.bazel",
        ".shellcheckrc",
    ],
)

# Shell scripts for linting
sh_binary(
    name = "check-bazel-src-files",
    srcs = ["check-bazel-src-files.sh"],
)

sh_binary(
    name = "populate-windsurf-rules",
    srcs = ["populate_windsurf_rules.sh"],
)

org_lint_tests(["README.org"])
