###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_go", version = "0.53.0")

# Configure Go version for Termux compatibility
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")
use_repo(go_sdk, "go_default_sdk")

bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_python", version = "1.0.0")

# Aspect rules for linting and formatting
bazel_dep(name = "aspect_rules_lint", version = "1.4.4")

# Buildifier for Bazel file formatting
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")

# Buf rules for protocol buffer formatting
bazel_dep(name = "rules_buf", version = "0.4.0")

# Configure Buf toolchain
buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# Use the latest buf CLI version
buf.toolchains(
    sha256 = "736e74d1697dcf253bc60b2f0fb4389c39dbc7be68472a7d564a953df8b19d12",
    version = "v1.50.0",
)

# Make buf CLI available for direct usage
use_repo(buf, "rules_buf_toolchains")

# Pip dependencies
pip_ext = use_extension(
    "@rules_python//python/extensions:pip.bzl",
    "pip",
)
pip_ext.parse(
    hub_name = "main_pip_deps",  # Changed to avoid conflict
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip_ext, "main_pip_deps")  # Make @main_pip_deps available

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_google_uuid",
    "com_github_jaeyeom_sugo",
    "com_github_leanovate_gopter",
    "org_modernc_sqlite",
)
