load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["baseball.go"],
    importpath = "github.com/jaeyeom/experimental/baseball",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "baseball",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["baseball_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_leanovate_gopter//:go_default_library",
        "@com_github_leanovate_gopter//gen:go_default_library",
        "@com_github_leanovate_gopter//prop:go_default_library",
    ],
)
