load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["memocache.go"],
    importpath = "github.com/jaeyeom/experimental/memocache",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["memocache_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_jaeyeom_sugo//par:go_default_library"],
)
