load("//tools/org-lint:defs.bzl", "org_lint_tests")

org_lint_tests([
    "README.org",
    "codeowners.org",
    "merge.org",
    "nudge.org",
    "pr-review.org",
    "slack.org",
    "storage.org",
])

sh_binary(
    name = "copy-pr-comments",
    srcs = ["copy-pr-comments.sh"],
)

sh_binary(
    name = "cleanup-repo",
    srcs = ["cleanup-repo.sh"],
)
