load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "codex.go",
        "reviewpush.go",
    ],
    importpath = "github.com/jaeyeom/experimental/scripts/reviewpush",
    visibility = ["//visibility:public"],
    deps = ["@com_github_jaeyeom_go_cmdexec//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["reviewpush_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_jaeyeom_go_cmdexec//:go_default_library"],
)
