load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "canvas",
    srcs = ["canvas.go"],
    importpath = "github.com/jaeyeom/experimental/text/canvas",
    visibility = ["//visibility:public"],
    deps = ["//text/wrap:go_default_library"],
)

go_test(
    name = "canvas_test",
    size = "small",
    srcs = [
        "canvas_test.go",
        "example_table_integration_test.go",
    ],
    embed = [":canvas"],
    deps = ["//text/table:go_default_library"],
)
