load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["canvas.go"],
    importpath = "github.com/jaeyeom/experimental/text/canvas",
    visibility = ["//visibility:public"],
    deps = ["//text/wrap:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "canvas_test.go",
        "example_table_integration_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//text/table:go_default_library"],
)
