load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["gantt.go"],
    importpath = "github.com/jaeyeom/experimental/text/gantt",
    visibility = ["//visibility:public"],
    deps = ["//text/canvas:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["gantt_test.go"],
    embed = [":go_default_library"],
)
