load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["table.go"],
    importpath = "github.com/jaeyeom/experimental/text/table",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "example_test.go",
        "golden_test.go",
        "table_test.go",
    ],
    data = glob(["testdata/*.golden"]),
    embed = [":go_default_library"],
)
