load("@aspect_rules_lint//format:defs.bzl", "format_multirun", "format_test")

package(default_visibility = ["//visibility:public"])

# Format rule for Go and Starlark files
format_multirun(
    name = "format",
    go = "@aspect_rules_lint//format:gofumpt",
    protocol_buffer = "//tools/lint:buf",
    python = "@aspect_rules_lint//format:ruff",
    starlark = "@buildifier_prebuilt//:buildifier",
)

format_test(
    name = "format_test",
    size = "small",
    timeout = "short",
    go = "@aspect_rules_lint//format:gofumpt",
    no_sandbox = True,  # Enables formatting the entire workspace
    protocol_buffer = "//tools/lint:buf",
    python = "@aspect_rules_lint//format:ruff",
    starlark = "@buildifier_prebuilt//:buildifier",
    workspace = "//:MODULE.bazel",
)
