load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")

# TODO(bzlmod): Uncomment when nogo-analyzer adds native bzlmod support
# load("@com_github_sluongng_nogo_analyzer//staticcheck:def.bzl", "staticcheck_analyzers")

package(default_visibility = ["//:__subpackages__"])

# Flag to skip nogo analyzers (for Termux/Android compatibility)
# Usage: bazel build --//tools/lint:skip_nogo=true //...
# Or use: bazel build --config=termux //...
bool_flag(
    name = "skip_nogo",
    build_setting_default = False,
)

config_setting(
    name = "skip_nogo_enabled",
    flag_values = {":skip_nogo": "True"},
)

exports_files([
    "linters.bzl",
])

alias(
    name = "buf",
    actual = "@rules_buf_toolchains//:buf",
)

# These are the additional govet analyzers that were missing in TOOLS_NOGO.
# TODO: Add shadow analyzer once all shadow issues in codebase are fixed:
#   "@org_golang_x_tools//go/analysis/passes/shadow:go_default_library",
ADDITIONAL_GOVET = [
    "@org_golang_x_tools//go/analysis/passes/appends:go_default_library",
    "@org_golang_x_tools//go/analysis/passes/defers:go_default_library",
    "@org_golang_x_tools//go/analysis/passes/slog:go_default_library",
    "@org_golang_x_tools//go/analysis/passes/timeformat:go_default_library",
    "@org_golang_x_tools//go/analysis/passes/unusedwrite:go_default_library",
]

STATICCHECK_ANALYZERS = [
    "QF1001",
    "QF1002",
    "QF1003",
    "QF1004",
    "QF1005",
    "QF1006",
    "QF1007",
    "QF1008",
    "QF1009",
    "QF1010",
    "QF1011",
    "QF1012",
    "S1000",
    "S1001",
    "S1002",
    "S1003",
    "S1004",
    "S1005",
    "S1006",
    "S1007",
    "S1008",
    "S1009",
    "S1010",
    "S1011",
    "S1012",
    "S1016",
    "S1017",
    "S1018",
    "S1019",
    "S1020",
    "S1021",
    "S1023",
    "S1024",
    "S1025",
    "S1028",
    "S1029",
    "S1030",
    "S1031",
    "S1032",
    "S1033",
    "S1034",
    "S1035",
    "S1036",
    "S1037",
    "S1038",
    "S1039",
    "S1040",
    "SA1000",
    "SA1001",
    "SA1002",
    "SA1003",
    "SA1004",
    "SA1005",
    "SA1006",
    "SA1007",
    "SA1008",
    "SA1010",
    "SA1011",
    "SA1012",
    "SA1013",
    "SA1014",
    "SA1015",
    "SA1016",
    "SA1017",
    "SA1018",
    "SA1019",
    "SA1020",
    "SA1021",
    "SA1023",
    "SA1024",
    "SA1025",
    "SA1026",
    "SA1027",
    "SA1028",
    "SA1029",
    "SA1030",
    "SA2000",
    "SA2001",
    "SA2002",
    "SA2003",
    "SA3000",
    "SA3001",
    "SA4000",
    "SA4001",
    "SA4003",
    "SA4004",
    "SA4005",
    "SA4006",
    "SA4008",
    "SA4009",
    "SA4010",
    "SA4011",
    "SA4012",
    "SA4013",
    "SA4014",
    "SA4015",
    "SA4016",
    "SA4017",
    "SA4018",
    "SA4019",
    "SA4020",
    "SA4021",
    "SA4022",
    "SA4023",
    "SA4024",
    "SA4025",
    "SA4026",
    "SA4027",
    "SA4028",
    "SA4029",
    "SA4030",
    "SA4031",
    "SA5000",
    "SA5001",
    "SA5002",
    "SA5003",
    "SA5004",
    "SA5005",
    "SA5007",
    "SA5008",
    "SA5009",
    "SA5010",
    "SA5011",
    "SA5012",
    "SA6000",
    "SA6001",
    "SA6002",
    "SA6003",
    "SA6005",
    "SA9001",
    "SA9002",
    "SA9003",
    "SA9004",
    "SA9005",
    "SA9006",
    "SA9007",
    "SA9008",
    "ST1000",
    "ST1001",
    "ST1003",
    "ST1005",
    "ST1006",
    "ST1008",
    "ST1011",
    "ST1012",
    "ST1013",
    "ST1015",
    "ST1016",
    "ST1017",
    "ST1018",
    "ST1019",
    "ST1020",
    "ST1021",
    "ST1022",
    "ST1023",
    "U1000",
]

nogo(
    name = "platform_nogo",
    config = "nogo.json",
    visibility = ["//visibility:public"],
    # TODO(bzlmod): Add staticcheck_analyzers(STATICCHECK_ANALYZERS) when
    # nogo-analyzer adds native bzlmod support. Currently disabled due to
    # complex transitive dependency requirements.
    # Use --//tools/lint:skip_nogo=true or --config=termux to skip analyzers
    deps = select({
        ":skip_nogo_enabled": [],
        "//conditions:default": TOOLS_NOGO + ADDITIONAL_GOVET,
    }),
)
