load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["course.go"],
    importpath = "github.com/jaeyeom/experimental/codelab/go/course",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["course_test.go"],
    embed = [":go_default_library"],
)
