load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generics_lib",
    srcs = ["generics.go"],
    importpath = "github.com/jaeyeom/experimental/codelab/go/generics",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generics",
    embed = [":generics_lib"],
    visibility = ["//visibility:public"],
)
