load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generics.go"],
    importpath = "github.com/jaeyeom/experimental/codelab/go/generics",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generics",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
