load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "partialconsumption_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaeyeom/experimental/codelab/go/partialconsumption",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "partialconsumption",
    embed = [":partialconsumption_lib"],
    visibility = ["//visibility:public"],
)
