load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jaeyeom/experimental/codelab/go/partialconsumption",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "partialconsumption",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
