load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//tools/org-lint:defs.bzl", "org_lint_tests")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jaeyeom/experimental/codelab/go/todo",
    visibility = ["//visibility:private"],
    deps = [
        "//codelab/go/todo/config:go_default_library",
        "//codelab/go/todo/core:go_default_library",
    ],
)

go_binary(
    name = "todo",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//codelab/go/todo/config:go_default_library",
        "//codelab/go/todo/core:go_default_library",
        "//codelab/go/todo/core/coretest:go_default_library",
        "//codelab/go/todo/storage/json:go_default_library",
        "//codelab/go/todo/testutil:go_default_library",
    ],
)

org_lint_tests([
    "IndentationFeature.org",
    "Milestone1.org",
    "Milestone2.org",
    "Milestone3.org",
    "README.org",
    "ReorderingFeature.org",
    "SubtasksFeature.org",
])
