load("@rules_go//go:def.bzl", "go_library")
load("@rules_pkl//pkl:defs.bzl", "pkl_library")

pkl_library(
    name = "config_pkl",
    srcs = ["Config.pkl"],
    visibility = ["//visibility:public"],
)

# Go library with pre-generated code from pkl-gen-go
# To regenerate: pkl-gen-go Config.pkl --output-path gen/ --base-path github.com/jaeyeom/experimental/devtools/gh-nudge/internal/config/pkl
go_library(
    name = "config_go",
    srcs = glob(["gen/*.go"]),
    importpath = "github.com/jaeyeom/experimental/devtools/gh-nudge/internal/config/pkl",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_apple_pkl_go//pkl",
    ],
)
