load("@rules_pkl//pkl:defs.bzl", "pkl_library")

pkl_library(
    name = "config_pkl",
    srcs = ["Config.pkl"],
    visibility = ["//visibility:public"],
)

# Go code is generated using pkl-gen-go and placed in //devtools/gh-nudge/internal/config/pkl
# To regenerate: cd devtools/gh-nudge/pkl && pkl-gen-go Config.pkl --output-path ../internal/config/pkl/
