load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "command_builder.go",
        "concurrent_executor.go",
        "executor.go",
        "helpers.go",
        "mock_executor.go",
        "result.go",
        "signal_executor.go",
        "signal_handler.go",
        "types.go",
    ],
    importpath = "github.com/jaeyeom/experimental/devtools/internal/executor",
    visibility = ["//devtools:__subpackages__"],
    deps = [
        "@org_golang_x_sys//unix:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "command_builder_test.go",
        "concurrent_executor_test.go",
        "executor_test.go",
        "helpers_test.go",
        "mock_executor_test.go",
        "signal_executor_test.go",
        "signal_handler_test.go",
        "types_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@org_golang_x_sys//unix:go_default_library",
    ],
)
