load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "env.go",
        "ghcli.go",
        "token.go",
    ],
    importpath = "github.com/jaeyeom/experimental/devtools/pkg/ghauth",
    visibility = ["//visibility:public"],
    deps = ["@com_github_jaeyeom_go_cmdexec//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "env_test.go",
        "ghcli_test.go",
        "token_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_jaeyeom_go_cmdexec//:go_default_library"],
)
