load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fixtures.go",
        "mock.go",
        "skip.go",
    ],
    importpath = "github.com/jaeyeom/experimental/devtools/pkg/ghtest",
    visibility = ["//visibility:public"],
    deps = [
        "//devtools/pkg/executor:go_default_library",
        "//devtools/pkg/ghauth:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mock_test.go"],
    embed = [":go_default_library"],
    deps = ["//devtools/pkg/executor:go_default_library"],
)
