load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ansible_lib",
    srcs = ["generate_packages.go"],
    importpath = "github.com/jaeyeom/experimental/devtools/setup-dev/ansible",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ansible",
    embed = [":ansible_lib"],
    visibility = ["//visibility:public"],
)
