load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["generate_packages.go"],
    importpath = "github.com/jaeyeom/experimental/devtools/setup-dev/ansible",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generate_packages",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
